# fuego

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml  sync-with-huggingface.yml
examples/: README.md  fuego_demo.ipynb  run_all.sh
examples/github_runner_app/: app.py  requirements.txt
examples/hello_world_torch/: fuego_run.py
examples/pytorch_vae_github/: fuego_run.py
examples/run_transformers_github/: fuego_run.py
examples/simple_example/: fuego_run.py  run.py
examples/simple_example_with_requirements/: fuego_run.py  requirements.txt  run.py
examples/transformers_github/: fuego_run.py
examples/transformers_text_classification/: fuego_run.py  requirements.txt  run_glue.py
src/fuego/: __init__.py  interface.py  provider_azml.py  provider_huggingface.py  provider_sagemaker.py  provider_utils.py  run_on_spaces.py  runtime.py
